--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT= 4000
 MONGO_URI = "mongodb+srv://Shreya:Shreya12345@cluster0.o8xij.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+# MONGO_URI = "mongodb+srv://Shreya:Shreya12345@cluster0.o8xij.mongodb.net/FSD-BDT?retryWrites=true&w=majority&appName=Cluster0"
