--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
