--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
@@ -19,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-parallax": "^3.5.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-tsparticles": "^2.12.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
